<resources>
    <string name="app_name">Quản lý lịch học</string>
    <string-array name="tab_name">
        <item>Chung</item>
        <item>Học Phần</item>
        <item>Lịch học</item>
    </string-array>

    <string name="alarm_act_title">Nhắc nhở</string>
    <string name="alarm_detail_act_title">Chi tiết nhắc nhở</string>
    <string name="alarm_add_act_title">Thêm nhắc nhở</string>
    <string name="alarm_edit_act_title">Chinh sửa</string>
    <string name="hoc_phan_act_title">Học phần</string>
    <string name="settings_act_title">Cài đặt</string>

    <string name="crop_dialog_title">Chọn lớp học phần</string>
    <string name="crop_dialog_message">Kéo chọn đúng danh sách mã học phần của bạn rồi nhấn CROP nhé</string>


    <string name="facebook_app_id">1183042115172735</string>
    <string name="fb_login_protocol_scheme">fb1183042115172735</string>

    <string name="menu_remove">Xóa</string>
    <string name="menu_edit">Chỉnh sửa</string>
    <string name="FIREBASE_PATH_ALL_HP">thong_tin_lop_hoc_phan</string>
    <string name="SERVER_KEY">
        AAAA2IVeKMQ:APA91bHbqbUIqLiCBbWOeZkyZyvEO0rOetzwTWz8DSHuO1NVsGCnsABTtz6VEHiF8Y91xfqZiwtmsitICCd0gtsc5N6AZP5_RoLQt8mY8nK6jpWnM7P4HfzOKeDoODxjSQETt7BlsWU9
    </string>


    <string name="fb_login_failed">Đăng nhập Facebook thất bại!!</string>
    <string name="gg_login_failed">Đăng Nhập Google Thất bại!!</string>
    <string name="email_already_login">Đăng nhập thất bại, có vẻ email của bạn đã được dùng</string>

    <string name="remind">Nhắc nhở</string>
    <string name="edit_hoc_phan">Thay đổi học phần</string>
    <string name="edit_ma_hp">Chỉnh sửa mã học phần</string>

    <string name="remove_du_lieu">Xóa dữ liệu học phần</string>
    <string name="settings">Cài đặt</string>
    <string name="logout">Đăng xuất</string>
    <string name="add">ADD</string>
    <string name="title">Tiêu đề</string>
    <string name="content">Nội dung</string>
    <string name="date">Ngày</string>
    <string name="time">Giờ</string>
    <string name="create">Create</string>
    <string name="cancel">cancel</string>
    <string name="huy">Hủy</string>
    <string name="ok">OK</string>
    <string name="undo">UNDO</string>

    <string name="login_with">LOGIN WITH</string>
    <string name="remind_me">Nhắc tôi</string>
    <string name="notification">Thông báo</string>
    <string name="are_you_sure_to_delete">Bạn có chắc muốn xóa không?</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="get_image">Lấy ảnh</string>
    <string name="detect">Nhận dạng</string>
    <string name="finish">Hoàn tất</string>
    <string name="back">Trở lại</string>
    <string name="next">Tiếp tục</string>
    <string name="please_choose_your_class">Chọn đúng lớp học phần của bạn nhé</string>
    <string name="ma_hoc_phan">Mã học phần</string>
    <string name="ten_hoc_phan">Tên học phần</string>
    <string name="giao_vien">Giáo viên</string>
    <string name="thoi_gian_phong_hoc">Thời gian - Phòng học</string>
    <string name="your_time_table">Thời khóa biểu của bạn</string>
    <string name="data_loading">Đang tải dữ liệu</string>
    <string name="lop_hoc_phan">Lớp học phần</string>
    <string name="understand">Đã hiểu</string>
    <string name="delete_user_class">Xóa dữ liệu lớp học phần?</string>
    <string name="delete_data_detail">Dữ liệu về các lớp học phần của bạn sẽ bị xóa khỏi thiết bị và trên đám mây</string>
    <string name="delete">DELETE</string>

    <string name="xoa_nhac_nho">Xóa nhắc nhở</string>
    <string name="xoa_nhac_nho_detail">Nhắc nhở này sẽ bị xóa khỏi thiết bị của bạn</string>
    <string name="incorrect_ma_hp">Nhập sai mã học phần</string>
    <string name="no_internet">Không có kết nối mạng</string>
    <string name="no_internet_msg">Dữ liệu của bạn được lưu trên đám mấy vì vậy ứng dụng cần được kết nối tới internet, hãy kiểm trại lại kết nối của bạn</string>
    <string name="retry">Thử lại</string>
    <string name="setting">Cài đặt</string>

    <string name="key_firebase_user_info">userInfo</string>
    <string name="key_firebase_list_mahp">listMaHocPHan</string>
    <string name="key_firebase_fcmtoken">FCMToken</string>
    <string name="key_firebase_user_detail">user_info</string>
    <string name="key_firebase_user_email">email</string>
    <string name="key_firebase_user_name">name</string>
    <string name="key_firebase_user_providerId">provider</string>
    <string name="key_firebase_user_phone">phone</string>
    <string name="key_firebase_user_photo_url">photo_url</string>
    <string name="key_firebase_user_uid">uid</string>

    <string name="error">Error: </string>
    <string name="unknown">Không rõ</string>
    <string name="unknown_symbol">###########</string>
    <string name="details">Details</string>
    <string name="remove_hp_success">Đã xóa lớp học phần</string>
    <string name="remove_alarm_success">Đã xoá nhắc nhở</string>
    <string name="add_alarm_success">Đã thêm nhắc nhở</string>
    <string name="remove_hp_failed">Thất bại</string>
    <string name="add_hp_success">Đã thêm lớp học phần</string>
    <string name="add_hp_failed">Thêm lớp học phần thất bại</string>
    <string name="sorry_error">Ứng dụng lỗi rồi!</string>
    <string name="undo_failed">Lỗi khi khôi phục!</string>
    <string name="error_parse_date_time">Lỗi khi parse date time</string>
    <string name="error_alarm_database_access">"Có lỗi khi truy xuất cơ sở dữ liệu</string>
    <string name="error_title">Có lỗi</string>

    <string name="error_sync_topic">Có lỗi khi đồng bộ dữ liệu</string>

    <string name="duplicated_lop_hp">Lớp học phần đã tồn tại</string>

    <string name="today">Hôm nay</string>
    <string name="tomorrow">Ngày mai</string>
    <string name="lastday">Hôm qua</string>
    <string name="thisweek">Tuần này</string>
    <string name="nextweek">Tuần tới</string>
    <string name="lastweek">Tuần trước</string>
    <string name="infuture">Sắp tới</string>
    <string name="inpast">Đã qua</string>
    <string name="search_hint">Type some text</string>
    <string name="title_activity_test_navigation">testNavigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="app_version">0.1a</string>
    <string name="update">Cập nhật</string>
    <string name="later">Để sau</string>
    <string name="team_name">ArrowE team</string>
    <string name="check_app_version">Kiểm tra phiên bản ứng dụng</string>
    <string name="check_db_version">Kiểm tra cơ sở dữ liệu</string>
    <string name="update_db">Cập nhật cơ sở dữ liệu</string>
    <string name="sync_user_db">Đồng bộ dữ liệu</string>
    <string name="search">Search</string>
    <string name="result">Kết quả</string>
    <string name="search_activity">Tìm kiếm</string>
    <string name="search_for">Kết quả cho </string>
    <string name="no_data">Không có dữ liệu nào</string>
    <string name="not_support_vision">Thiết bị này không hỗ trợ chức năng nhận dạng!</string>
    <string name="version">Phiên bản</string>
    <string name="no_internet_connection">Không có Internet</string>
    <string name="need_internet_for_posts">Ứng dụng cần internet để cập nhật các thông báo, hãy bật kết nối internet trên thiết bị của bạn</string>
    <string name="or">or</string>
    <string name="app_name_vi">QUẢN LÝ LỊCH HỌC</string>
    <string name="cannot_open_cam">Can\'t open Camera</string>
    <string name="skip">Bỏ qua</string>
    <string name="add_manually">Thêm thủ công</string>

    <string name="APP_CHANNEL_ID">QLLH_CHANNEL_ID</string>
    <string name="APP_CHANNEL_NAME">QLLH_CHANNEL_NAME</string>
    <string name="APP_CHANNEL_DESCRIPTION">Description about quan ly lich hoc notification channel</string>
    <string name="sample_title">Thông báo đến lớp: [14.Nh25] Tuốc bin</string>
    <string name="sample_content">Thầy/Cô nhắn: Lớp NGHỈ HỌC (Tiết:7-8) ngày: 07/09/2017</string>
    <string name="processing">Đang xử lý ...</string>
    <string name="let_try">Thử</string>
    <string name="provide_class_id_method_tip">Ứng dụng cần danh sách mã học phần bạn đang học.\nChỉ cần ảnh chụp danh sách mã học phần, chúng tôi sẽ nhận dạng các lớp học phần cho bạn, bạn có muốn thử tính năng này không?</string>
    <string name="class_id_invailid">Không tìm thấy lớp học phần</string>
    <string name="class_is_exist">Lớp học phần bị trùng</string>
    <string name="other">Khác</string>
    <string name="log_out">Đăng xuất</string>
    <string name="about.team_member">\u25cf   Thành viên</string>
    <string name="navigation.about">Thông tin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about.app_description">Ứng dụng giúp sinh viên trường Đại học Bách khoa cập nhật các thông báo từ trang daotao.dut.udn.vn/sv\n\Bài tập lớn môn Công Nghệ Di Động</string>
    <string name="about.members">Từ Anh Hồng\nNguyễn Văn Nam\nTrần Hữu Thắng\nHoàng Công Tuấn</string>
    <string name="about.about">\u25cf   Thông tin</string>
    <string name="about.contact">\u25cf   Liên hệ</string>
    <string name="about.email">congtuanspm97@gmail.com</string>
    <string name="FCM_details">FCM Details</string>

</resources>
