<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_nhac_nho"
        android:title="@string/remind"
        android:icon="@drawable/ic_alarm_black_24dp" />
    <item
        android:id="@+id/item_thay_doi_HP"
        android:title="@string/edit_hoc_phan"
        android:icon="@drawable/ic_border_color_black_24dp"/>
    <item
        android:id="@+id/item_xoa_du_lieu"
        android:title="@string/remove_du_lieu"
        android:icon="@drawable/ic_delete_black_24dp"/>
    <!--<item-->
        <!--android:id="@+id/item_cat_dat"-->
        <!--android:title="@string/settings"-->
        <!--android:ic_app="@drawable/ic_settings_black_24dp"/>-->
    <item
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/item_dang_xuat"
                android:title="@string/log_out"
                android:icon="@drawable/ic_power_settings_new_black_24dp"/>
            <item
                android:id="@+id/item_about"
                android:title="@string/navigation.about"
                android:icon="@drawable/baseline_info_black_24"/>
        </menu>
    </item>
</menu>