<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/layoutPadding"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="@dimen/stepperSize"
        android:layout_height="@dimen/stepperSize"
        android:text="1"
        android:textSize="@dimen/textNormal"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_circle_white"
        app:layout_constraintTop_toTopOf="@+id/tvStep2"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toLeftOf="@+id/view3"
        android:layout_marginRight="8dp"
        android:id="@+id/tvStep1" />

    <TextView
        android:layout_width="@dimen/stepperSize"
        android:layout_height="@dimen/stepperSize"
        android:text="2"
        android:textSize="@dimen/textNormal"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_circle"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/tvStep2" />

    <TextView
        android:layout_width="@dimen/stepperSize"
        android:layout_height="@dimen/stepperSize"
        android:text="3"
        android:textSize="@dimen/textNormal"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_circle"
        app:layout_constraintLeft_toRightOf="@+id/view4"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/tvStep2"
        android:layout_marginTop="0dp"
        android:id="@+id/tvStep3" />

    <View
        android:layout_width="48dp"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        app:layout_constraintRight_toLeftOf="@+id/tvStep2"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvStep2"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="@+id/tvStep2"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.555"
        android:id="@+id/view3" />
    <View
        android:layout_width="48dp"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        app:layout_constraintLeft_toRightOf="@+id/tvStep2"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/tvStep2"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvStep2"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.555"
        android:id="@+id/view4" />

    <TextView
        android:id="@+id/tvStep1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/get_image"
        android:textSize="@dimen/textNormal"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintLeft_toLeftOf="@+id/tvStep1"
        app:layout_constraintRight_toRightOf="@+id/tvStep1"
        app:layout_constraintTop_toBottomOf="@+id/tvStep1" />

    <TextView
        android:id="@+id/tvStep2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/detect"
        android:textSize="@dimen/textNormal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/tvStep2"
        app:layout_constraintRight_toRightOf="@+id/tvStep2"
        app:layout_constraintTop_toBottomOf="@+id/tvStep2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textSize="@dimen/textNormal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvStep3"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tvStep3"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/tvStep3"
        app:layout_constraintHorizontal_bias="0.5"
        android:id="@+id/tvStep3Label"/>
</android.support.constraint.ConstraintLayout>