<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login_background"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinatorLayout">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/app_name_vi"
            android:textAlignment="center"
            android:textColor="@color/blueGrey"
            android:textSize="@dimen/textSizeLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/viewgroup_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnLoginFb"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/shape_fb_login_button"
                android:drawableLeft="@drawable/ic_facebook"
                android:drawableStart="@drawable/ic_facebook"
                android:text="@string/login_with_facebook"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnLoginGg"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/shape_gg_login"
                android:drawableLeft="@drawable/ic_google"
                android:drawableStart="@drawable/ic_google"
                android:text="@string/login_with_google"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLoginFb" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="#DDD9DB"
                app:layout_constraintBottom_toTopOf="@+id/btnLoginGg"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/btnLoginFb"
                app:layout_constraintRight_toLeftOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/btnLoginFb"
                app:layout_constraintVertical_bias="0.51" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="#DDD9DB"
                app:layout_constraintBottom_toTopOf="@+id/btnLoginGg"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/textView"
                app:layout_constraintRight_toRightOf="@+id/btnLoginFb"
                app:layout_constraintTop_toBottomOf="@+id/btnLoginFb"
                app:layout_constraintVertical_bias="0.51" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="#DDD9DB"
                app:layout_constraintBottom_toTopOf="@+id/btnLoginGg"
                app:layout_constraintLeft_toLeftOf="@+id/btnLoginFb"
                app:layout_constraintRight_toRightOf="@+id/btnLoginFb"
                app:layout_constraintTop_toBottomOf="@+id/btnLoginFb"
                tools:text="or" />
        </android.support.constraint.ConstraintLayout>


        <ProgressBar
            android:id="@+id/progresBar_login"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="@color/blueGrey"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progresBar_login" />
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
